service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juans-service
spec:
  selector:
    app: flask-simple-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 7878
